Added a div and a <h1> tag to the current div

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <div> Added a div to the file</div>
 
 <div> This is an edit made by george</div>
+<div>
+	<h1>Hello, we are trying out giit skills here, just to make ourselves  more better<h1>
+</div>
 
 </body>
 </html>
